--- a/LandingPage.html
+++ b/LandingPage.html
@@ -585,7 +585,11 @@
                     <p class="font600 size14 black">less time spent on system maintenance</p>
                 </div>
                 <a href="https://about.gitlab.com/customers/lockheed-martin/" style="z-index:2;">
-                    <p class="font600 size18 black">Read story ></p>
+                    <div class="card_link">
+                        <div class="link font600 size18 black" style="margin-top: 30px;">
+                            Read story <span class="link_icon">></span>
+                        </div>
+                    </div>
                 </a>
             </div>
             <div class="feature_showcare_item" style="margin-right: 16px;">
