--- a/LandingPage.html
+++ b/LandingPage.html
@@ -68,28 +68,28 @@
                                             <p class="font400 size16" style="color: #7759c2;;">
                                                 Our solutions 
                                             </p>
-                                            <a href="https://about.gitlab.com/gitlab-duo/" style="display: block;color:#74717a;">
+                                            <a href="https://about.gitlab.com/gitlab-duo/" class="taskbar_link">
                                                 <p class="font400 size16">GitLab Duo (AI)  </p>
                                             </a>
-                                            <a href="https://about.gitlab.com/solutions/security-compliance/" style="display: block;color:#74717a;">
+                                            <a href="https://about.gitlab.com/solutions/security-compliance/" class="taskbar_link">
                                                 <p class="font400 size16">Security & Compliance </p>
                                             </a>
-                                            <a href="https://about.gitlab.com/solutions/continuous-integration/" style="display: block;color:#74717a;">
+                                            <a href="https://about.gitlab.com/solutions/continuous-integration/" class="taskbar_link">
                                                 <p class="font400 size16">Continuous integration & delivery  </p>
                                             </a>
-                                            <a href="https://about.gitlab.com/solutions/delivery-automation/" style="display: block;color:#74717a;">
+                                            <a href="https://about.gitlab.com/solutions/delivery-automation/" class="taskbar_link">
                                                 <p class="font400 size16">Automated software delivery  </p>
                                             </a>
-                                            <a href="https://about.gitlab.com/solutions/value-stream-management/" style="display: block;color:#74717a;">
+                                            <a href="https://about.gitlab.com/solutions/value-stream-management/" class="taskbar_link">
                                                 <p class="font400 size16">Value stream management  </p>
                                             </a>
-                                            <a href="https://about.gitlab.com/solutions/agile-delivery/" style="display: block;color:#74717a;">
+                                            <a href="https://about.gitlab.com/solutions/agile-delivery/" class="taskbar_link">
                                                 <p class="font400 size16">Agile Delivery  </p>
                                             </a>
-                                            <a href="https://about.gitlab.com/solutions/source-code-management/" style="display: block;color:#74717a;">
+                                            <a href="https://about.gitlab.com/solutions/source-code-management/" class="taskbar_link">
                                                 <p class="font400 size16">Source code management </p>
                                             </a>
-                                            <a href="https://about.gitlab.com/solutions/gitops/" style="display: block;color:#74717a;">
+                                            <a href="https://about.gitlab.com/solutions/gitops/" class="taskbar_link">
                                                 <p class="font400 size16">GitOps  </p>
                                             </a>
                                         </div>
@@ -97,16 +97,16 @@
                                             <p class="font400 size16" style="color: #7759c2;;">
                                                 By company size 
                                             </p>
-                                            <a href="https://about.gitlab.com/enterprise/" style="display: block;color:#74717a;">
+                                            <a href="https://about.gitlab.com/enterprise/" class="taskbar_link">
                                                 <p class="font400 size16">Enterprise   </p>
                                             </a>
-                                            <a href="https://about.gitlab.com/small-business/" style="display: block;color:#74717a;">
+                                            <a href="https://about.gitlab.com/small-business/" class="taskbar_link">
                                                 <p class="font400 size16">Small business </p>
                                             </a>
-                                            <a href="https://about.gitlab.com/solutions/startups/" style="display: block;color:#74717a;">
+                                            <a href="https://about.gitlab.com/solutions/startups/" class="taskbar_link">
                                                 <p class="font400 size16">Startups   </p>
                                             </a>
-                                            <a href="https://about.gitlab.com/solutions/nonprofit/" style="display: block;color:#74717a;">
+                                            <a href="https://about.gitlab.com/solutions/nonprofit/" class="taskbar_link">
                                                 <p class="font400 size16">Nonprofits </p>
                                             </a>
                                         </div>
@@ -114,13 +114,13 @@
                                             <p class="font400 size16" style="color: #7759c2;;">
                                                 By industry 
                                             </p>
-                                            <a href="https://about.gitlab.com/solutions/finance/" style="display: block;color:#74717a;">
+                                            <a href="https://about.gitlab.com/solutions/finance/" class="taskbar_link">
                                                 <p class="font400 size16">Financial services </p>
                                             </a>
-                                            <a href="https://about.gitlab.com/solutions/public-sector/" style="display: block;color:#74717a;">
+                                            <a href="https://about.gitlab.com/solutions/public-sector/" class="taskbar_link">
                                                 <p class="font400 size16">Public sector  </p>
                                             </a>
-                                            <a href="https://about.gitlab.com/solutions/education/" style="display: block;color:#74717a;">
+                                            <a href="https://about.gitlab.com/solutions/education/" class="taskbar_link">
                                                 <p class="font400 size16">Education  </p>
                                             </a>
                                         </div>
@@ -133,7 +133,7 @@
                                         </div>
                                     </a>
                                 </div>
-                                <div style="width: 300px;">
+                                <div style="width: 300px;height:auto;display: flex;flex-direction: column;">
                                     <div class="navigation-dropdown__side-section">
                                         <div class="icon">
                                             <svg fill="none" height="34" viewBox="0 0 34 34" width="34" xmlns="http://www.w3.org/2000/svg"><g stroke="#171321" stroke-miterlimit="10"><path d="m32.9999 23.8085h-17.3617v9.1915h17.3617z"></path><path d="m30.6171 23.6587v-2.2332h-17.3617v9.1915h2.383"></path><path d="m8.82983 18.0213 6.80847-2.383v-11.23404"></path><path d="m24.149 31.2979c1.5981 0 2.8936-1.2955 2.8936-2.8936s-1.2955-2.8937-2.8936-2.8937-2.8936 1.2956-2.8936 2.8937 1.2955 2.8936 2.8936 2.8936z"></path><path d="m30.2596 19.0426c.2315-1.0417.3574-2.1243.3574-3.2341 0-8.17701-6.6315-14.8085-14.8085-14.8085-8.17701 0-14.8085 6.63149-14.8085 14.8085 0 6.4477 4.12255 11.9285 9.8723 13.9643"></path></g></svg>
@@ -197,22 +197,22 @@
                                             <p class="font400 size16" style="color: #7759c2;;">
                                                 Getting started  
                                             </p>
-                                            <a href="https://about.gitlab.com/install/" style="display: block;color:#74717a;">
+                                            <a href="https://about.gitlab.com/install/" class="taskbar_link">
                                                 <p class="font400 size16">Install </p>
                                             </a>
-                                            <a href="https://about.gitlab.com/get-started/" style="display: block;color:#74717a;">
+                                            <a href="https://about.gitlab.com/get-started/" class="taskbar_link">
                                                 <p class="font400 size16">Quick start guides  </p>
                                             </a>
-                                            <a href="https://about.gitlab.com/learn/" style="display: block;color:#74717a;">
+                                            <a href="https://about.gitlab.com/learn/" class="taskbar_link">
                                                 <p class="font400 size16">Learn </p>
                                             </a>
-                                            <a href="https://docs.gitlab.com/" style="display: block;color:#74717a;">
+                                            <a href="https://docs.gitlab.com/" class="taskbar_link">
                                                 <p class="font400 size16">Product documentation   </p>
                                             </a>
-                                            <a href="https://about.gitlab.com/getting-started-videos/" style="display: block;color:#74717a;">
+                                            <a href="https://about.gitlab.com/getting-started-videos/" class="taskbar_link">
                                                 <p class="font400 size16">Best practice videos </p>
                                             </a>
-                                            <a href="https://about.gitlab.com/integrations/" style="display: block;color:#74717a;">
+                                            <a href="https://about.gitlab.com/integrations/" class="taskbar_link">
                                                 <p class="font400 size16">Integrations </p>
                                             </a>
                                         </div>
@@ -220,19 +220,19 @@
                                             <p class="font400 size16" style="color: #7759c2;;">
                                                 Discover  
                                             </p>
-                                            <a href="https://about.gitlab.com/customers/" style="display: block;color:#74717a;">
+                                            <a href="https://about.gitlab.com/customers/" class="taskbar_link">
                                                 <p class="font400 size16">Customer success stories </p>
                                             </a>
-                                            <a href="https://about.gitlab.com/blog/" style="display: block;color:#74717a;">
+                                            <a href="https://about.gitlab.com/blog/" class="taskbar_link">
                                                 <p class="font400 size16">Blog </p>
                                             </a>
-                                            <a href="https://about.gitlab.com/company/all-remote/" style="display: block;color:#74717a;">
+                                            <a href="https://about.gitlab.com/company/all-remote/" class="taskbar_link">
                                                 <p class="font400 size16">Remote  </p>
                                             </a>
-                                            <a href="https://about.gitlab.com/teamops/" style="display: block;color:#74717a;">
+                                            <a href="https://about.gitlab.com/teamops/" class="taskbar_link">
                                                 <p class="font400 size16">TeamOps </p>
                                             </a>
-                                            <a href="https://about.gitlab.com/devsecops/" style="display: block;color:#74717a;">
+                                            <a href="https://about.gitlab.com/devsecops/" class="taskbar_link">
                                                 <p class="font400 size16">DevSecOps </p>
                                             </a>
                                         </div>
@@ -240,16 +240,16 @@
                                             <p class="font400 size16" style="color: #7759c2;;">
                                                 Connect  
                                             </p>
-                                            <a href="https://about.gitlab.com/community/" style="display: block;color:#74717a;">
+                                            <a href="https://about.gitlab.com/community/" class="taskbar_link">
                                                 <p class="font400 size16">Community </p>
                                             </a>
-                                            <a href="https://forum.gitlab.com/" style="display: block;color:#74717a;">
+                                            <a href="https://forum.gitlab.com/" class="taskbar_link">
                                                 <p class="font400 size16">Forum  </p>
                                             </a>
-                                            <a href="https://about.gitlab.com/events/" style="display: block;color:#74717a;">
+                                            <a href="https://about.gitlab.com/events/" class="taskbar_link">
                                                 <p class="font400 size16">Events </p>
                                             </a>
-                                            <a href="https://about.gitlab.com/partners/" style="display: block;color:#74717a;">
+                                            <a href="https://about.gitlab.com/partners/" class="taskbar_link">
                                                 <p class="font400 size16">Partners </p>
                                             </a>
                                             
@@ -288,34 +288,34 @@
                             </div>
                             <div class="navigation-dropdown__popover">
                                 <div class="navigation-dropdown__main" style="line-height: 32px;">
-                                    <a href="https://about.gitlab.com/company/" style="display: block;color:#74717a;">
+                                    <a href="https://about.gitlab.com/company/" class="taskbar_link">
                                         <p class="font400 size16">About </p>
                                     </a>
-                                    <a href="https://about.gitlab.com/jobs/" style="display: block;color:#74717a;">
+                                    <a href="https://about.gitlab.com/jobs/" class="taskbar_link">
                                         <p class="font400 size16">Jobs </p>
                                     </a>
-                                    <a href="https://about.gitlab.com/events/" style="display: block;color:#74717a;">
+                                    <a href="https://about.gitlab.com/events/" class="taskbar_link">
                                         <p class="font400 size16">Events </p>
                                     </a>
-                                    <a href="https://about.gitlab.com/company/team/e-group/" style="display: block;color:#74717a;">
+                                    <a href="https://about.gitlab.com/company/team/e-group/" class="taskbar_link">
                                         <p class="font400 size16">Leadership </p>
                                     </a>
-                                    <a href="https://about.gitlab.com/company/team/" style="display: block;color:#74717a;">
+                                    <a href="https://about.gitlab.com/company/team/" class="taskbar_link">
                                         <p class="font400 size16">Team </p>
                                     </a>
-                                    <a href="https://handbook.gitlab.com/" style="display: block;color:#74717a;">
+                                    <a href="https://handbook.gitlab.com/" class="taskbar_link">
                                         <p class="font400 size16">Handbook </p>
                                     </a>
-                                    <a href="https://ir.gitlab.com/" style="display: block;color:#74717a;">
+                                    <a href="https://ir.gitlab.com/" class="taskbar_link">
                                         <p class="font400 size16">Investor relations </p>
                                     </a>
-                                    <a href="https://about.gitlab.com/security/" style="display: block;color:#74717a;">
+                                    <a href="https://about.gitlab.com/security/" class="taskbar_link">
                                         <p class="font400 size16">Trust Center </p>
                                     </a>
-                                    <a href="https://about.gitlab.com/company/contact/" style="display: block;color:#74717a;">
+                                    <a href="https://about.gitlab.com/company/contact/" class="taskbar_link">
                                         <p class="font400 size16">Newsletter </p>
                                     </a>
-                                    <a href="https://about.gitlab.com/press/" style="display: block;color:#74717a;">
+                                    <a href="https://about.gitlab.com/press/" class="taskbar_link">
                                         <p class="font400 size16">Press </p>
                                     </a>
                                 </div>
@@ -330,10 +330,10 @@
                             </div>
                             <div class="navigation-dropdown__popover">
                                 <div class="navigation-dropdown__main" style="line-height: 32px;">
-                                    <a href="https://about.gitlab.com/support/" style="display: block;color:#74717a;">
+                                    <a href="https://about.gitlab.com/support/" class="taskbar_link">
                                         <p class="font400 size16">Get help </p>
                                     </a>
-                                    <a href="https://customers.gitlab.com/customers/sign_in/" style="display: block;color:#74717a;">
+                                    <a href="https://customers.gitlab.com/customers/sign_in/" class="taskbar_link">
                                         <p class="font400 size16">Customer portal </p>
                                     </a>
                                 </div>
