--- a/LandingPage.html
+++ b/LandingPage.html
@@ -506,7 +506,7 @@
                     <p class="font400 size20">Automate software delivery, boost productivity, and secure your end-to-end software supply chain.</p>
                     <div class="intro_block">
                         <a href="https://about.gitlab.com/platform/">
-                            <div class="intro_button font600 size18">Discover the platform</div>
+                            <div class="button font600 size18">Discover the platform</div>
                         </a>
                         <div class="link font600 size18 black">
                             What is GitLab<span class="link_icon">?</span>
