--- a/LandingPage.html
+++ b/LandingPage.html
@@ -1283,7 +1283,7 @@ for (var i = 1; i <= 100; i++) {
                             GitLab is the leading DevSecOps platform
                         </p>
                     </div>
-                    <div class="recognition-spotlight_row_item" >
+                    <div class="recognition-spotlight_row_item" id="row_item2">
                         <div style="line-height: 60px;">
                             <p class="font600 size64">50%+</p>
                             <p class="font400 size18"> Fortune 100</p>
