--- a/LandingPage.html
+++ b/LandingPage.html
@@ -375,7 +375,7 @@
     </div>
     <div class="container">
         <div class="slide_container">
-            <div class="slide_block_container">
+            <div class="slide_block_container" style="overflow: hidden;">
                 <div class="slide_block">
                     <p class="font600 size64" style="line-height: 72px;">
                         Software. Faster.
